@@ -13,34 +13,34 @@ public class Stream {
 
         String list = myList.stream().map(value -> "'" + value + "'").collect(Collectors.joining(","));
         System.out.println(list);
-//
-//        //Duplicates Elements in the list
 
-//        System.out.println("Duplicates Elements in the list " + myList.stream().collect(Collectors.groupingBy(id -> id, Collectors.counting())).entrySet().stream().filter(id -> Math.toIntExact(id.getValue()) > 1).map(Map.Entry::getKey).collect(Collectors.toList()));
-//
-//        //Find first element in the list
-//        System.out.println("Find first element in the list " + myList.stream().findFirst().get());
-//
-//        //Total number of elements in list
-//        System.out.println("Total number of elements in list " + myList.stream().count());
-//
-//        //MAx in list
-//        System.out.println("Max number in list " + myList.stream().max(Integer::compare).get());
-//
-//        //find the first non-repeated character
-//        String input = "Java  articles are Awesome";
-//
-//        Optional<Character> a = input.chars().mapToObj(Character::toLowerCase).collect(Collectors.groupingBy(id -> (char) id.intValue(), LinkedHashMap::new, Collectors.counting()))
-//                .entrySet().stream().filter(id -> id.getValue() == 1L).map(Map.Entry::getKey).findFirst();
-//        System.out.println("find the first non-repeated character " + (char) (a.isPresent() ? a.get() : -1));
-//
-//        List<String> names = Arrays.asList("AA", "BB", "AA", "CC");
-//        System.out.println("String count greater than 1 in the list " + names.stream().collect(Collectors.groupingBy(id -> id, Collectors.counting())).entrySet().stream().filter(id -> Math.toIntExact(id.getValue()) > 1).toList());
-//
-//        String s = "string data to count each character";
-//
-//        Map<Character, Long> map = s.chars().mapToObj(Character::toLowerCase).collect(Collectors.groupingBy(id -> (char) id.intValue(), LinkedHashMap::new, Collectors.counting()));
-//        System.out.println("string data to count each character " + map);
+        //Duplicates Elements in the list
+
+        System.out.println("Duplicates Elements in the list " + myList.stream().collect(Collectors.groupingBy(id -> id, Collectors.counting())).entrySet().stream().filter(id -> Math.toIntExact(id.getValue()) > 1).map(Map.Entry::getKey).collect(Collectors.toList()));
+
+        //Find first element in the list
+        System.out.println("Find first element in the list " + myList.stream().findFirst().get());
+
+        //Total number of elements in list
+        System.out.println("Total number of elements in list " + myList.stream().count());
+
+        //MAx in list
+        System.out.println("Max number in list " + myList.stream().max(Integer::compare).get());
+
+        //find the first non-repeated character
+        String input = "Java  articles are Awesome";
+
+        Optional<Character> a = input.chars().mapToObj(Character::toLowerCase).collect(Collectors.groupingBy(id -> (char) id.intValue(), LinkedHashMap::new, Collectors.counting()))
+                .entrySet().stream().filter(id -> id.getValue() == 1L).map(Map.Entry::getKey).findFirst();
+        System.out.println("find the first non-repeated character " + (char) (a.isPresent() ? a.get() : -1));
+
+        List<String> names = Arrays.asList("AA", "BB", "AA", "CC");
+        System.out.println("String count greater than 1 in the list " + names.stream().collect(Collectors.groupingBy(id -> id, Collectors.counting())).entrySet().stream().filter(id -> Math.toIntExact(id.getValue()) > 1).toList());
+
+        String s = "string data to count each character";
+
+        Map<Character, Long> map = s.chars().mapToObj(Character::toLowerCase).collect(Collectors.groupingBy(id -> (char) id.intValue(), LinkedHashMap::new, Collectors.counting()));
+        System.out.println("string data to count each character " + map);
 
 
 //        Question 1: Get transaction in 2011 and sort by value.
@@ -71,8 +71,8 @@ public class Stream {
         System.out.println("Get Highest transaction " + amount);
 //        Group transactions by currencies.
 
-        Map<Currency, List<Transaction>> map = SetUp.getTransactions().stream().collect(Collectors.groupingBy(Transaction::getCurrency));
-        System.out.println("Group transactions by currencies. " + map);
+        Map<Currency, List<Transaction>> map1 = SetUp.getTransactions().stream().collect(Collectors.groupingBy(Transaction::getCurrency));
+        System.out.println("Group transactions by currencies. " + map1);
 
     }
 }
